--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,6 +19,21 @@ include:
     - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
       when: manual
 
+.terraform:build:
+  stage: build
+  script:
+    - sh -c "while true; do gitlab-terraform plan 2>&1 | grep Unauthorized && sleep 15 || break; done"
+    - sh -c "while true; do gitlab-terraform plan-json 2>&1 | grep Unauthorized && sleep 15 || break; done"
+  resource_group: ${TF_STATE_NAME}
+  artifacts:
+    # The next line, which disables public access to pipeline artifacts, may not be available everywhere.
+    # See: https://docs.gitlab.com/ee/ci/yaml/#artifactspublic
+    public: false
+    paths:
+      - ${TF_ROOT}/plan.cache
+    reports:
+      terraform: ${TF_ROOT}/plan.json
+
 stages:
   - validate
   - build
