--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,7 +12,7 @@ include:
 .terraform:deploy:
   stage: deploy
   script:
-    - sh -c 'while true; do output=$(gitlab-terraform apply 2>&1);       echo "$output" | grep Unauthorized && sleep 15 || (echo "$output" && break); done'
+    - sh -c 'while true; do gitlab-terraform apply 2>&1 >output.txt;       cat output.txt | grep Unauthorized && sleep 15 || (cat output.txt && break); done'
   resource_group: ${TF_STATE_NAME}
   rules:
     - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH && $TF_AUTO_DEPLOY == "true"
@@ -22,7 +22,7 @@ include:
 .terraform:build:
   stage: build
   script:
-    - sh -c "while true; do gitlab-terraform plan       2>&1 >output.txt;  cat output.txt | grep Unauthorized && sleep 15 || (cat output.txt && break); done"
+    - sh -c "while true; do gitlab-terraform plan       2>&1 >output.txt; cat output.txt | grep "Your infrastructure matches the configuration" && break;  cat output.txt | grep Unauthorized && sleep 15 || (cat output.txt && break); done"
     - sh -c "while true; do gitlab-terraform plan-json  2>&1 >output.txt;  cat output.txt | grep Unauthorized && sleep 15 || (cat output.txt && break); done"
   resource_group: ${TF_STATE_NAME}
   artifacts:
