--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,7 +22,7 @@ include:
 .terraform:build:
   stage: build
   script:
-    - sh -c "while true; do gitlab-terraform plan       2>&1 >output.txt; cat output.txt | grep "Your infrastructure matches the configuration" && break;  cat output.txt | grep Unauthorized && sleep 15 || (cat output.txt && break); done"
+    - sh -c "while true; do gitlab-terraform plan       2>&1 >output.txt; cat output.txt | grep 'Your infrastructure matches the configuration' && break;  cat output.txt | grep Unauthorized && sleep 15 || (cat output.txt && break); done"
     - sh -c "while true; do gitlab-terraform plan-json  2>&1 >output.txt;  cat output.txt | grep Unauthorized && sleep 15 || (cat output.txt && break); done"
   resource_group: ${TF_STATE_NAME}
   artifacts:
