--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,7 +12,7 @@ include:
 .terraform:deploy:
   stage: deploy
   script:
-    - sh -c 'while true; do gitlab-terraform apply 2>&1 >output.txt;       cat output.txt | grep Unauthorized && sleep 15 || (cat output.txt && break); done'
+    - sh -c "set -x;while true; do gitlab-terraform apply 2>&1 >output.txt; cat output.txt | grep 'Your infrastructure matches the configuration' && cat output.txt && exit 0; cat output.txt | grep Unauthorized && sleep 15 || { cat output.txt; exit 0; }; done"
   resource_group: ${TF_STATE_NAME}
   rules:
     - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH && $TF_AUTO_DEPLOY == "true"
